# theboard

./: .env.example  .gitignore  AGENTS.md  BLOODBANK_INTEGRATION.md  CLAUDE.md  Dockerfile  GOD.md  INTEGRATION_SUMMARY.md  README.md  alembic.ini  compose.yml  docker-compose.yml  gemini  mise.toml  pyproject.toml  test_bloodbank_integration.py
.mise/tasks/: task.sh  version_major.sh  version_minor.sh  version_patch.sh
.swarm/: memory.db
alembic/: env.py
bmad/: config.yaml
data/agents/: initial_pool.yaml
docs/: 33GOD_INTEGRATION_PHASE1.md  33GOD_SERVICE_INTEGRATION_RETROSPECTIVE.md  CONTAINER_DEPLOYMENT_ISSUES.md  DEVELOPER.md  IMPLEMENTATION_SUMMARY.md  LETTA_INTEGRATION.md  LOGGING.md  MEETING_CLI_IMPROVEMENTS.md  PHASE2_VERIFICATION.md  PHASE3A_MEETING_RESULT_EVENTS.md  RAG_INTEGRATION_SCHEMA.md  TROUBLESHOOTING.md  USER_GUIDE.md  WIZARD_GUIDE.md  agno-integration.md  architecture-theboard-2025-12-19.md  bmm-workflow-status.yaml  brainstorming-meeting-config-wizard.md  brainstorming-theboard-architecture-2025-12-19.md  research-theboard-architecture-2025-12-30.md  sprint-1-agno-refactor.md  sprint-1-agno-review.md  sprint-1-code-review.md  sprint-1-completion-report.md  sprint-1-hardening-complete.md  sprint-2-multi-agent-complete.md  sprint-5-plan-theboard-2025-12-30.md  sprint-plan-theboard-2025-12-19.md  sprint-status.yaml  tech-spec-theboard-2025-12-19.md
phases_output/: final_analysis.md  metrics.md  phase1_discovery.md  phase2_planning.md  phase3_analysis.md  phase4_synthesis.md  phase5_consolidation.md
scripts/: seed_agents.py
src/theboard/: __init__.py  api.py  cli.py  config.py  database.py  preferences.py  schemas.py
src/theboard/agents/: __init__.py  agent_migration.py  base.py  compressor.py  domain_expert.py  letta_integration.py  notetaker.py
src/theboard/cli_commands/: agents.py  config.py  wizard.py
src/theboard/events/: __init__.py  bloodbank_emitter.py  consumer.py  emitter.py  schemas.py
src/theboard/models/: __init__.py  base.py  meeting.py  pricing.py
src/theboard/services/: __init__.py  agent_service.py  cost_estimator.py  embedding_service.py  engagement_metrics.py  export_service.py  meeting_service.py  openrouter_service.py
tests/: README.md  __init__.py  conftest.py  e2e_validation.py
tests/fixtures/: openrouter_responses.py  toml_configs.py
tests/integration/: __init__.py  test_agno_integration.py  test_embedding_integration.py  test_model_selection_flow.py  test_session_persistence.py
tests/performance/: test_memory_performance.py
tests/unit/: __init__.py  test_agent_migration.py  test_agents.py  test_compressor.py  test_config.py  test_config_commands.py  test_database.py  test_embedding_service.py  test_event_foundation.py  test_greedy_strategy.py  test_letta_integration.py  test_meeting_service.py  test_multi_agent_meeting.py  test_openrouter_service.py  test_preferences.py  test_qdrant_integration.py  test_redis_manager.py  test_schemas.py  test_session_leak_fix.py  test_workflow.py
(+5 files in other folders)
