[project]
name = "theboard"
version = "0.1.0"
description = "Toss around some ideas"
readme = "README.md"
authors = [
    { name = "Jarad DeLorenzo", email = "jaradd@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
theboard = "theboard:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
